--- a/src/app/pages/auth/components/login/login.component.html
+++ b/src/app/pages/auth/components/login/login.component.html
@@ -1,1 +1,21 @@
-<button routerLink="/auth/register" type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 font-medium rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Register</button>
+<div class="min-h-screen flex items-center justify-center">
+    <div class="bg-gray-800 p-8 rounded-md shadow-md w-[40rem]">
+      <h1 class="text-2xl font-medium mb-6 text-center">Login</h1>
+      <form [formGroup]="formGroup">
+        <div class="mb-4">
+          <label for="username" class="block font-medium mb-2">Username</label>
+          <input formControlName="username" type="text" id="username" name="username" class="border-gray-400 border rounded-md w-full py-2 px-3 bg-gray-700 text-white" />
+        </div>
+        <div class="mb-4">
+          <label for="password" class="block font-medium mb-2">Password</label>
+          <input formControlName="password" type="password" id="password" name="password" class="border-gray-400 border rounded-md w-full py-2 px-3 bg-gray-700 text-white" />
+        </div>
+        <div class="flex flex-col">
+            <a class="align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 mb-2" href="#">
+                Nu ai un cont?
+            </a>
+            <button type="submit" [disabled]="!formGroup.valid" [ngClass]="{'disabled':!formGroup.valid,'hover:bg-blue-600':formGroup.valid}" class="bg-blue-500 text-white py-2 px-4 rounded-md  transition-colors duration-200">Login</button>
+        </div>
+      </form>
+    </div>
+  </div>
