--- a/src/app/pages/auth/components/register/register.component.html
+++ b/src/app/pages/auth/components/register/register.component.html
@@ -1,20 +1,24 @@
-<div class="min-h-screen flex items-center justify-center">
-    <div class="bg-gray-800 p-8 rounded-md shadow-md">
+<div class="text-white min-h-screen flex items-center justify-center">
+    <div class="bg-gray-800 p-8 rounded-md shadow-md w-[40rem]">
       <h1 class="text-2xl font-medium mb-6 text-center">Register</h1>
-      <form>
+      <form (ngSubmit)="registerAccount()" [formGroup]="formGroup">
         <div class="mb-4">
           <label for="email" class="block font-medium mb-2">Email</label>
-          <input type="email" id="email" name="email" class="border-gray-400 border rounded-md w-full py-2 px-3 bg-gray-700 text-white" />
+          <input type="email" id="email" name="email" formControlName="email" class="border-gray-400 border rounded-md w-full py-2 px-3 bg-gray-700 text-white" />
         </div>
         <div class="mb-4">
           <label for="username" class="block font-medium mb-2">Username</label>
-          <input type="text" id="username" name="username" class="border-gray-400 border rounded-md w-full py-2 px-3 bg-gray-700 text-white" />
+          <input type="text" id="username" name="username" formControlName="username" class="border-gray-400 border rounded-md w-full py-2 px-3 bg-gray-700 text-white" />
         </div>
         <div class="mb-4">
           <label for="password" class="block font-medium mb-2">Password</label>
-          <input type="password" id="password" name="password" class="border-gray-400 border rounded-md w-full py-2 px-3 bg-gray-700 text-white" />
+          <input type="password" id="password" name="password" formControlName="password" class="border-gray-400 border rounded-md w-full py-2 px-3 bg-gray-700 text-white" />
         </div>
-        <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600 transition-colors duration-200">Register</button>
+        <div class="flex flex-col">
+            <a routerLink="/auth/login" class="align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 mb-2">Already have an account?</a>
+            <button type="submit" [disabled]="!formGroup.valid" [ngClass]="{'disabled':!formGroup.valid,'hover:bg-blue-600':formGroup.valid}" class="bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600 transition-colors duration-200">Register</button>
+        </div>
+        
       </form>
     </div>
   </div>
