--- a/src/app/_shared/components/project-card/project-card.component.html
+++ b/src/app/_shared/components/project-card/project-card.component.html
@@ -1,5 +1,7 @@
 
 <div class="card">
-    <h2>{{project?.name}}</h2>
-    <p>{{project?.description}}</p>
+    <div>
+        <h2>{{project?.name}}</h2>
+        <p>{{project?.description}}</p>
+    </div>
 </div>
