first page done

--- a/src/app/pages/dashboard/components/user-profile/user-profile.component.html
+++ b/src/app/pages/dashboard/components/user-profile/user-profile.component.html
@@ -3,9 +3,12 @@
 </div>
 
 <div class="content">
-    <div class="profile">
+    <div class="profile flex flex-row justify-center">
         <div class="profile__card">
-            <img src="https://media.istockphoto.com/id/1309328823/ro/fotografie/portret-headshot-al-angajatului-z%C3%A2mbitor-de-sex-masculin-%C3%AEn-birou.jpg?s=1024x1024&w=is&k=20&c=HmoQGrjuXk5ulF472m5FJ-YWMA4GBN3tIA4SEt9nxDw=" alt="Profile picture">
+            <div class="image">
+                <img src="https://media.istockphoto.com/id/1309328823/ro/fotografie/portret-headshot-al-angajatului-z%C3%A2mbitor-de-sex-masculin-%C3%AEn-birou.jpg?s=1024x1024&w=is&k=20&c=HmoQGrjuXk5ulF472m5FJ-YWMA4GBN3tIA4SEt9nxDw=" alt="Profile picture">
+            </div>
+            
             <div class="info">
                 
                 <h2><i class="pi pi-user" style="font-size: 1em; margin-right: 0.5em;"></i>{{userName == null ? "" : userName}}</h2>
@@ -13,6 +16,9 @@
                 <h3><i class="pi pi-chart-bar" style="font-size: 1em; margin-right: 0.5em;"></i>Points: 200 Mandarine</h3>
             </div>
         </div>
+
+        <app-leaderboard [users]="users"></app-leaderboard>
+
     </div>
     <div class="projects">
         <div class="project__field">
