--- a/src/app/pages/dashboard/components/user-profile/user-profile.component.scss
+++ b/src/app/pages/dashboard/components/user-profile/user-profile.component.scss
@@ -11,6 +11,10 @@
 
 .content{
     height: calc(100vh - 57px);
+    background-image: url('../../../../../assets/images/b.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    justify-content: center;
     display: flex;
     flex-direction: row;
 }
@@ -22,8 +26,11 @@
 }
 
 .profile__card{
-    border: 1px solid whitesmoke ;
-    
+    border: 1px solid rgba(188, 132, 132, 0.3);
+    background: rgba(255, 255, 255, 0.14);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(1.5px);
+    -webkit-backdrop-filter: blur(1.5px);
     padding: 2em;
     border-radius: 0.5em;
     max-width: 20em;
