--- a/src/app/pages/dashboard/components/online/online.component.scss
+++ b/src/app/pages/dashboard/components/online/online.component.scss
@@ -1,6 +1,20 @@
 $light: #111827;
 $dark: #071426;
 
+::ng-deep .p-tabmenu .p-tabmenu-nav {
+    background: #111827 !important;
+    border:none;
+    border-bottom: 1px solid whitesmoke;
+    border-width: 0 0 2px 0;
+}
+::ng-deep .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link{
+    background: #111827 !important;
+    color: whitesmoke;
+}
+
+::ng-deep .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link{
+    border-bottom: 2px solid whitesmoke;
+}
 
 .content{
     height: calc(100vh - 57px);
