--- a/src/app/pages/dashboard/components/rooms/rooms.component.html
+++ b/src/app/pages/dashboard/components/rooms/rooms.component.html
@@ -23,6 +23,9 @@
     <div class="chat">
         <div class="flex flex-col">
             <h2>Chat with your frineds!</h2>
+            <div class="dialog">
+                <app-message [users]="users"></app-message>
+            </div>
             <div class="send flex justify-center">
                 <input formControlName="message" placeholder="Throw a mandarin!" type="text" pInputText/>
                 <button icon="pi pi-send" type="submit" class="text-white bg-blue-950" pButton></button>
