--- a/src/app/_shared/components/message/message.component.html
+++ b/src/app/_shared/components/message/message.component.html
@@ -1,4 +1,4 @@
-<div class="message flex" *ngFor="let user of users">
-    <h4>{{user.author}}:</h4>
+<div class="message flex " *ngFor="let user of users">
+    <h4 style="color:rgb(219, 125, 19)">{{user.author}}: </h4>
     <p>{{user.message}}</p>
 </div>
