user page leader board design done

--- a/src/app/_shared/components/leaderboard/leaderboard.component.html
+++ b/src/app/_shared/components/leaderboard/leaderboard.component.html
@@ -1,5 +1,5 @@
 
-<p-table [value]="users" >
+<p-table [value]="users" [tableStyle]="{ 'width': '100%' }" >
     <ng-template pTemplate="header">
         <tr>
             <th>Username</th>
