--- a/src/app/pages/dashboard/components/user-profile/user-profile.component.html
+++ b/src/app/pages/dashboard/components/user-profile/user-profile.component.html
@@ -13,8 +13,10 @@
                 <h3><i class="pi pi-chart-bar" style="font-size: 1em; margin-right: 0.5em;"></i>Points: 200 Mandarine</h3>
             </div>
         </div>
-
-        <app-leaderboard [users]="users"></app-leaderboard>
+        <div class="w-full ">   
+            <app-leaderboard [users]="users"></app-leaderboard>
+        </div>
+        
 
     </div>
     
