--- a/src/app/pages/dashboard/components/user-profile/user-profile.component.scss
+++ b/src/app/pages/dashboard/components/user-profile/user-profile.component.scss
@@ -38,6 +38,7 @@
     padding: 2em;
     border-radius: 0.5em;
     max-width: 20em;
+    max-height: 30em;
     display: flex;
     flex-direction: column;
     justify-content: center;
