Add create tasks

--- a/src/app/_shared/components/project-card/project-card.component.html
+++ b/src/app/_shared/components/project-card/project-card.component.html
@@ -1,5 +1,5 @@
 
-<div class="card">
+<div class="card" (click)="redirect()">
     <div>
         <h2>{{project?.name}}</h2>
         <p>{{project?.description}}</p>
