--- a/src/app/pages/dashboard/components/rooms/rooms.component.html
+++ b/src/app/pages/dashboard/components/rooms/rooms.component.html
@@ -3,20 +3,20 @@
 <div class="content">
     <div class="coding flex flex-col">
         <div class="challenge">
+            <h1>Room code:{{id}}</h1>
             <h2>Challenge 01</h2>
             <p>suma a 2 numere a si b, unde a = 4 si b = 6</p>
         </div>
-        <button (click)="sendMessage()">Send message</button>
         <div class="editor">
             <ngx-monaco-editor [options]="editorOptions" [(ngModel)]="code"></ngx-monaco-editor>
             <div class="output">
-                <textarea placeholder="output:" rows="3" cols="30" [style.width]="'100%'" pInputTextarea [autoResize]="true"></textarea> 
+                <textarea [(ngModel)]="output" disabled placeholder="output:" rows="3" cols="30" [style.width]="'100%'" pInputTextarea [autoResize]="true"></textarea> 
             </div>
         </div>
         
         <div class="btns flex">
-            <button type="submit" class="text-white bg-blue-950" pButton>Compile</button>
-            <button type="submit" class="text-white bg-blue-950" pButton>Finish!</button>
+            <button (click)=" compile()" type="submit" class="text-white bg-blue-950" pButton>Compile</button>
+            <button (click)="finishRoom()" class="text-white bg-blue-950" pButton>Finish!</button>
         </div>
         
     </div>
@@ -24,11 +24,11 @@
        
             <h2>Chat with your frineds!</h2>
             <div class="dialog">
-                <app-message [users]="users"></app-message>
+                <app-message [users]="messages"></app-message>
             </div>
             <div class="send flex justify-center">
-                <input formControlName="message" placeholder="Throw a mandarin!" type="text" pInputText/>
-                <button icon="pi pi-send" type="submit" class="text-white bg-blue-950" pButton></button>
+                <input [(ngModel)]="inputMessage" placeholder="Throw a mandarin!" type="text" pInputText/>
+                <button (click)="sendMessage()" icon="pi pi-send" type="submit" class="text-white bg-blue-950" pButton></button>
             </div>
         
     </div>
