--- a/src/app/pages/dashboard/components/about/about.component.html
+++ b/src/app/pages/dashboard/components/about/about.component.html
@@ -1,7 +1,7 @@
 <app-nav-bar></app-nav-bar>
 <div class="content">
     <div class="grid grid-cols-2 gap-4 p-8 justify-center items-center place-items-center">
-        <p-card class="rounded-lg shadow-md w-96">
+        <p-card class="rounded-lg shadow-md w-96 slide-in-left">
             <div class="flex justify-center">
                 <div class="image">
                     <img class="img" src="../../../../../assets/images/raul_avatar.png" alt="">
@@ -19,7 +19,7 @@
             </div>
         </p-card>
         
-        <p-card class="rounded-lg shadow-md w-96">
+        <p-card class="rounded-lg shadow-md w-96 slide-in-right">
             <div class="flex justify-center">
                 <div class="image">
                     <img class="img" src="../../../../../assets/images/mandarin_portret.png" alt="">
