--- a/src/app/pages/dashboard/components/user-profile/user-profile.component.html
+++ b/src/app/pages/dashboard/components/user-profile/user-profile.component.html
@@ -10,7 +10,7 @@
                 
                 <h2><i class="pi pi-user" style="font-size: 1em; margin-right: 0.5em;"></i>{{userName == null ? "" : userName}}</h2>
                 <h3><i class="pi pi-star" style="font-size: 1em; margin-right: 0.5em;"></i>Level: Small Mandarina (1)</h3>
-                <h3><i class="pi pi-chart-bar" style="font-size: 1em; margin-right: 0.5em;"></i>Points: 200 Mandarine</h3>
+                <h3><i class="pi pi-chart-bar" style="font-size: 1em; margin-right: 0.5em;"></i>Points: {{userDetails.experience}} Mandarine</h3>
             </div>
         </div>
         <div class="w-full scale-in-center">   
