--- a/src/app/pages/dashboard/components/online/online.component.scss
+++ b/src/app/pages/dashboard/components/online/online.component.scss
@@ -37,5 +37,6 @@ $dark: #071426;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(1.5px);
     -webkit-backdrop-filter: blur(1.5px);
+    height: 20em;
 }
 
