--- a/src/app/pages/dashboard/components/online/online.component.html
+++ b/src/app/pages/dashboard/components/online/online.component.html
@@ -1,12 +1,12 @@
 <app-nav-bar></app-nav-bar>
 
 <div class="content flex jsutify-center">
-    <div class="generate flex flex-col slide-in-left">
+    <div class="generate flex flex-col slide-in-left text-center">
         <h2>Generate a room</h2>
         <button (click)=" createRoom()" type="submit" class="text-white bg-blue-950 mt-9" pButton>Generate</button>
     </div>
     <h1>Or..</h1>
-    <div class="connect flex flex-col slide-in-right">
+    <div class="connect flex flex-col slide-in-right text-center">
         <h2>Connect to an existing room</h2>
         <input [(ngModel)]="inputJoin" placeholder="Room ID" type="text" pInputText />
         <button (click)="join()" type="submit" class="text-white bg-blue-950 mt-9" pButton>Connect</button>
