--- a/src/app/_shared/components/message/message.component.html
+++ b/src/app/_shared/components/message/message.component.html
@@ -1,4 +1,9 @@
-<div class="message flex " *ngFor="let user of users">
-    <h4 style="color:rgb(219, 125, 19)">{{user.author}}: </h4>
-    <p>{{user.message}}</p>
+<div class="message flex" *ngFor="let user of users">
+    <div class="image">
+        <img class="profile_image" [src]="user.profileImage" alt="Profile image">
+    </div>
+    <div class="message_box">
+        <p>{{user.message}}</p>
+    </div>
+    
 </div>
