--- a/src/app/_shared/components/message/message.component.scss
+++ b/src/app/_shared/components/message/message.component.scss
@@ -1,5 +1,33 @@
 
 .message{
-    
     justify-content: flex-start;
+    margin-bottom: 15px;
 }
+
+
+.image{
+    position: relative;
+    width: 30px;
+    height: 30px;
+    overflow: hidden;
+}
+
+.profile_image{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    height: 100%;
+    width: auto;
+    border-radius: 50%;
+    -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
+}
+
+.message_box{
+    background-color: rgb(0, 0, 11);
+    padding: 10px;
+    margin-left: 10px;
+    border-radius: 5px;
+}
+
